; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/dwc3/extr_dwc3-omap.c_dwc3_omap_enable_irqs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/dwc3/extr_dwc3-omap.c_dwc3_omap_enable_irqs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dwc3_omap = type { i32 }

@USBOTGSS_IRQO_COREIRQ_ST = common dso_local global i32 0, align 4
@USBOTGSS_IRQMISC_OEVT = common dso_local global i32 0, align 4
@USBOTGSS_IRQMISC_DRVVBUS_RISE = common dso_local global i32 0, align 4
@USBOTGSS_IRQMISC_CHRGVBUS_RISE = common dso_local global i32 0, align 4
@USBOTGSS_IRQMISC_DISCHRGVBUS_RISE = common dso_local global i32 0, align 4
@USBOTGSS_IRQMISC_IDPULLUP_RISE = common dso_local global i32 0, align 4
@USBOTGSS_IRQMISC_DRVVBUS_FALL = common dso_local global i32 0, align 4
@USBOTGSS_IRQMISC_CHRGVBUS_FALL = common dso_local global i32 0, align 4
@USBOTGSS_IRQMISC_DISCHRGVBUS_FALL = common dso_local global i32 0, align 4
@USBOTGSS_IRQMISC_IDPULLUP_FALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dwc3_omap*)* @dwc3_omap_enable_irqs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dwc3_omap_enable_irqs(%struct.dwc3_omap* %0) #0 {
  %2 = alloca %struct.dwc3_omap*, align 8
  %3 = alloca i32, align 4
  store %struct.dwc3_omap* %0, %struct.dwc3_omap** %2, align 8
  %4 = load i32, i32* @USBOTGSS_IRQO_COREIRQ_ST, align 4
  store i32 %4, i32* %3, align 4
  %5 = load %struct.dwc3_omap*, %struct.dwc3_omap** %2, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @dwc3_omap_write_irq0_set(%struct.dwc3_omap* %5, i32 %6)
  %8 = load i32, i32* @USBOTGSS_IRQMISC_OEVT, align 4
  %9 = load i32, i32* @USBOTGSS_IRQMISC_DRVVBUS_RISE, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @USBOTGSS_IRQMISC_CHRGVBUS_RISE, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @USBOTGSS_IRQMISC_DISCHRGVBUS_RISE, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @USBOTGSS_IRQMISC_IDPULLUP_RISE, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @USBOTGSS_IRQMISC_DRVVBUS_FALL, align 4
  %18 = or i32 %16, %17
  %19 = load i32, i32* @USBOTGSS_IRQMISC_CHRGVBUS_FALL, align 4
  %20 = or i32 %18, %19
  %21 = load i32, i32* @USBOTGSS_IRQMISC_DISCHRGVBUS_FALL, align 4
  %22 = or i32 %20, %21
  %23 = load i32, i32* @USBOTGSS_IRQMISC_IDPULLUP_FALL, align 4
  %24 = or i32 %22, %23
  store i32 %24, i32* %3, align 4
  %25 = load %struct.dwc3_omap*, %struct.dwc3_omap** %2, align 8
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @dwc3_omap_write_irqmisc_set(%struct.dwc3_omap* %25, i32 %26)
  ret void
}

declare dso_local i32 @dwc3_omap_write_irq0_set(%struct.dwc3_omap*, i32) #1

declare dso_local i32 @dwc3_omap_write_irqmisc_set(%struct.dwc3_omap*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
